tp4/tp4-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tp4-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/tp4-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tp4-default: "true"
